feat(AllStarFacadeService): 기존에 존재하는 팀은 선택 횟수 반영하지 않도록 수정